# stm32F1

./: CMakeLists.txt  README.md
src/: main.c  stm32.c  stm32.h
src/drivers/: rcc.c  rcc.h  serial.c  serial.h
src/hardware/regs/: flash.h  gpio.h  i2c.h  rcc.h  serial.h
src/hardware/structs/: flash.h  rcc.h  serial.h
